--- a/cpt-scr/src/pages/Chat/Chat-frame.scss
+++ b/cpt-scr/src/pages/Chat/Chat-frame.scss
@@ -2,7 +2,7 @@
 
 .message-container {
   width: 100%;
-  height: 100%;
+  height: 100%; 
   overflow-y: scroll;
   overflow-x: hidden;
 }
@@ -18,7 +18,7 @@
 
 .message {
   height: auto;
-  padding: 10px;
+  padding: 0px 10px 10px 10px;
   display: flex;
 }
 
@@ -40,6 +40,23 @@
   word-break: break-word;
 }
 
+
+
+
+.message .message-content p { 
+  margin: 8px 5px;
+}
+
+.message .message-content .message-content--file {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.message .message-content .message-content--file p{
+  margin: 8px 5px;
+}
+
 #you {
   justify-content: flex-start;
 }
@@ -50,7 +67,7 @@
 
 #you .message-meta {
   justify-content: flex-start;
-  margin-left: 5px;
+  margin-left: 7px;
 }
 
 #other {
@@ -64,11 +81,13 @@
 
 #other .message-meta {
   justify-content: flex-end;
-  margin-right: 5px;
+  margin-right: 7px;
 }
 
 #time {
   padding: 0;
+  color: grey;
+  font-size: 10px;
 }
 
 .message-meta #author {
